--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h4>Your Work</h4>
       <p><em>Code your answer in <code>main.js</code> and </em><button>Push Me</button></p>
       <div class="answer-box">
-        <div id="circle-bw" class="exerciseItem"></div>
+        <div property=true id="circle-bw" class="exerciseItem"></div>
       </div>
     </div>
   </div>
